# pg_search

./: .gitignore  README.md  ai-response.sql  backup.sh  commands.txt  docker-compose.yml  init.sql  mypsql_init  pyproject.toml  run-insert.sh
payloads/: book.yml  dobbs.yml
sql/: AddTriggerToUpdateTsvectorColumn.rb  add_last_event.sql  authors.sql  book_status.sql  books_for_author.sql  create_tables.sql  full-text.sql  joe_pickett.sql  search.sql  unsearchable_books.sql  update_searchables.sql
src/pg_search/: __init__.py  database.py
src/pg_search/commands/: db.py  tools.py
src/pg_search/models/: __init__.py  author.py  book.py  event.py
src/pg_search/services/: book_inserter.py  yaml_loader.py
src/pg_search/support/: __init__.py  date.py  json.py  template.py
src/pg_search/templates/: book_authors.sql  book_find_by_id.sql  book_yaml.j2  books_with_status.sql  event_find.sql  event_history.sql  event_insert.sql  event_last.sql  reindex.sql  search.sql  support.j2  update_book_searchable.sql
